# MaximumNotes-Server

./: .flake8  pyproject.toml
