[tool.poetry]
name = "maximunnotes-server"
version = "0.1.0"
description = ""
authors = ["Matan Peretz <matanperetz@outlook.com>"]
readme = "README.md"
packages = [{include = "maximunnotes_server", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
