[tool.poetry]
name = "maximunnotes-server"
version = "0.1.0"
description = ""
authors = ["Matan Peretz <matanperetz@outlook.com>"]
readme = "README.md"
packages = [{include = "maximunnotes_server", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pyright = "^1.1.315"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line_length = 120

